--- a/todo.txt
+++ b/todo.txt
@@ -1,30 +1,10 @@
+Events
+- General event management
+- Clean up GameState 
 - Interaction event
   - No more merchants, only NPCs
-  - 2 dialogue options, 1 barganing options
-- Debug/remove redundancy of UI mapping
-- Debug logs
-  - Room descriptions
-- Overstock only forces you to discard single item
-- Back escapes discard/interaction sequence
-- Shouldn't be able to use most base items
-- Test game over, add to description
+  - 2 dialogue options, 1 barganing option
 - Base game spell management
-- States/classes/enums need more consistency
-  - Player Level
-  - Combat/Traps
-    - Damage success chance
-    - Average damage range
-    - Frequency
-  - Loot Generation (Chambers/NPCs)
-  - Item rarity
-  - Healing spell/potion frequency
-  - Exhaustion
-  - Skill Levels 
-
-Features
-- Add move counter/effects
-- Action Menu Should have status bar 
-  - Player details?
 - Initialization
   - Enter name
   - Enter description
@@ -34,13 +14,38 @@ Features
   - Gain n amount of hp
   - Choose a skill to add to
   - Rebuild character
+- Game Over
 
+Debug
+- Logs
+  - Room description capitlization
+- Overstock only forces you to discard single item
+- Back escapes discard/interaction sequence
+- Shouldn't be able to use most base items
+- Enums where appropriate (clean up old files)
+- Balancing
+  - Player Level
+  - Combat/Traps
+    - Damage success chance
+    - Average damage range
+    - Frequency
+  - Loot Generation (Chambers/NPCs)
+  - Item rarity
+  - Healing spell/potion frequency
+  - Exhaustion
+  - Skill Levels
+
+
+Features
+- Add move counter/effects
+- Action Menu Should have status bar 
+  - Player details?
 - Containerize and deploy
 
 Later
 - Database
 - User authorization
-- Deployment
+- Full stack deployment
 
 Future Mechanics
 - Classes
